syntax = "proto3";

option csharp_namespace = "BookService";

package books;

service BookService {
  rpc GetBook (GetBookRequest) returns (BookResponse);
}

message GetBookRequest {
  int32 id = 1;
}

message BookResponse {
  int32 id = 1;
  string title = 2;
  string author = 3;
  bool is_available = 4;
}